# portfolio-api-cloud

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
health-lambda/: .dockerignore  Dockerfile  index.ts  package-lock.json  package.json
src/: app.rs  auth.rs  cache.rs  common.rs  config.rs  dynamodb.rs  error.rs  jwk_cache.rs  logging.rs  main.rs  repo.rs  state.rs  tracing.rs
src/models/: about.rs  education.rs  experience.rs  mod.rs  personal_info.rs  projects.rs  section.rs  skills.rs  testimonials.rs
src/queries/: get_section.rs  mod.rs  put_section.rs
src/routes/: get_about.rs  get_education.rs  get_experience.rs  get_personal_information.rs  get_profile.rs  get_projects.rs  get_skills.rs  health.rs  mod.rs
src/routes/sections/: about.rs  education.rs  experience.rs  get_about.rs  get_education.rs  get_experience.rs  get_personal_information.rs  get_profile.rs  get_projects.rs  get_skills.rs  handler.rs  mod.rs  personal_information.rs  profile.rs  projects.rs  skills.rs  testimonials.rs
tf/: .terraform.lock.hcl  data.tf  locals.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
tf/modules/api_compute/: main.tf  outputs.tf  variables.tf
tf/modules/api_compute/templates/: user_data.sh.tpl
tf/modules/api_edge/: main.tf  outputs.tf  variables.tf  versions.tf
tf/modules/github_oidc_ecr/: main.tf  outputs.tf  variables.tf
tf/modules/health_check/: main.tf  outputs.tf  variables.tf
tf/modules/public_edge/: main.tf  outputs.tf  variables.tf
