[package]
name = "portfolio-api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
envconfig = "0.11.1"
serde = { version = "1.0.228", features = ["derive"] }
actix-web = "4.12.1"
serde_json = "1.0.145"
tracing = { version = "0.1.44" }
tracing-loki = "0.2.6"
tracing-subscriber = { version = "0.3.22", features = ["json"] }
tokio = "1.48.0"
config = { version = "0.15.19", features = ["toml"] }
url = "2.5.7"
once_cell = "1.21.3"
actix-files = "0.6.9"
anyhow = "1.0.100"
actix-cors = "0.7.1"
aws-config = { version = "1.8.12"}
aws-sdk-dynamodb = { version = "1.101.0" }
aws-sdk-secretsmanager = { version = "1.97.0" }
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }