[package]
name = "portfolio-api"
version = "0.1.0"
edition = "2024"

[dependencies]
envconfig = "0.11.1"
serde = { version = "1.0.228", features = ["derive"] }
actix-web = "4.12.1"
serde_json = "1.0.145"
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
tokio = "1.48.0"
config = { version = "0.15.19", features = ["toml"] }
once_cell = "1.21.3"
anyhow = "1.0.100"
actix-cors = "0.7.1"
aws-config = { version = "1.8.12"}
aws-sdk-dynamodb = { version = "1.101.0" }
aws-sdk-secretsmanager = { version = "1.97.0" }
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }
tracing-appender = "0.2"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
thiserror = "2.0.17"
time = "0.3.44"