[package]
name = "portfolio-api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
actix-web = "4.12.1"
actix-cors = "0.7.1"
tokio = "1.48.0"
config = { version = "0.15.19", features = ["toml"] }
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
tracing-appender = "0.2"
aws-config = "1.8.12"
aws-sdk-dynamodb = "1.101.0"
aws-sdk-secretsmanager = "1.97.0"
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }
